--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,14 @@
+html, body, #root {
+  min-height: 100% !important;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Roboto, sans-serif;
+}
+
+#root {
+  background-color: #efefef;
 }
